# SBB_Clock_Widget

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  sbb-cff-ffs.xcf
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
