[package]
name = "sbb-clock-widget"
version = "0.1.0"
description = "SBB Swiss Federal Railways clock widget"
authors = ["mankboy"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
